now3.css
@media (min-width: 850px){
 .menu .links ul li a{
   float: left;
   text-align: right;
   margin-left: 8.5%;
   margin-top: 30px;
   margin-right: 0;
 }
 }

 @media (max-width: 849px){
 .menu .links ul li a{
   float: left;
   text-align: right;
   margin-left: 6%;
   margin-top: 30px;
   margin-right: 0;
 }
 }
*{
   margin: 0;
 }
body{
 background: #D5D5D5;
}

nav{
 background-color:#D5D5D5;
 width: 100%;
 height: 77px;
}



nav img{
 margin-top: 15px;
 margin-left: 20px;
}

h6{
 font-size: 20px;
 font-family: 'Raleway', sans-serif;
 text-align: center;
 margin-bottom: 40px;
}



#dropcontent {
 height: 100%; /* 100% Full-height */
 visibility: hidden;
 /*width: 0px;*/ /* 0 width - change this with JavaScript */
 position: fixed; /* Stay in place */
 z-index: 1; /* Stay on top */
 top: 0;
 left: 0;
 background: #D5D5D5;
 overflow-x: hidden; /* Disable horizontal scroll */
 padding-top: 60px; /* Place content 60px from the top */
 /*transition: 0.5s;*/ /* 0.5 second transition effect to slide in the sidenav */
 border-right:1px solid white;
}

#dropcontent li a {
   color: black;
   padding: 10px 10px;
   text-decoration: none;
   display: block;
   font-size: 20px;
   font-family: 'Raleway', sans-serif;
 }

.b1{
 background: #D5D5D5;
 color: black;
 border: 2px solid #D5D5D5;
 margin-left: 10px;
}

.drop{
 float: left;
}

.dropbtn{
 background: #D5D5D5;
 border: 2px solid  #D5D5D5;
 height: 20px;
   margin-top: 10px;
}

div.menu ul{
   list-style-type: none;
}

.links{
 width: 100%;
 height: 77px;
}


#list{
 font-family: 'Raleway', sans-serif;
}

#list li{
 margin-top: 5px;
}

.links ul li a{
 font-family: 'Raleway', sans-serif;
 text-decoration: none;
 color: black;
}

#list li:active{
   background: #888;
   color: #fff;
   text-decoration: line-through;
}

.addBtn {
   padding: 10px;
   height: 10px;
   width: 20px;
   background:#D5D5D5;
   color: black;
   float: left;
   text-align: center;
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
   margin-right: 15px;
   font-family: 'Raleway', sans-serif;
}

#myInput{
 width: 120px;
 margin-top: 8px;
 margin-bottom: 30px;
 margin-right: 50px;
}

#list{
 text-align: left;
}

.close {
 right: 0;
 top: 0;
 padding: 4px 5px 10px 4px;
 margin-left: 2px;
}

.close:hover {
 background-color: white;
}

#logo {
 font-size: 200px;
 font-family: 'Raleway', sans-serif;
 text-align: center;
 padding-top: 200px;
 font-weight: 100;
 margin-bottom: 200px;
}


/*dwm css stuff*/
.cals{
  background: #D5D5D5;
  width: 100%;
  height: 600px;
}
.d{
  margin-top: 250px;
  margin-left: 7%;
  width: 30%;
  float: left;
  font-size: 50px;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 400px;
}
.d a{
  text-decoration: none;
  color: black;
}
.w{
  margin-top: 250px;
  width: 30%;
  float: left;
  font-size: 50px;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 400px;
}
.w a{
  text-decoration: none;
  color: black;
}
.m{
  margin-top: 250px;
  width: 30%;
  font-size: 50px;
  float: left;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 400px;
}
.m a{
  text-decoration: none;
  color: black;
}









/*clock css*/
.clock {
 width: 30rem;
 height: 30rem;
 border: 10px solid #eaeaea;
 border-radius:50%;
 margin: 100px 50px;
 margin-right: 90px;
 position: relative;
 padding:2rem;
 float: left;
}

.clock2 {
 width: 30rem;
 height: 30rem;
 border: 10px solid #eaeaea;
 border-radius:50%;
 margin: 100px 50px;
 margin-left: 30px;
 position: relative;
 padding:2rem;
 float: left;
}

.clock-face {
 position: relative;
 width: 100%;
 height: 100%;
 transform: translateY(-3px); /* account for the height of the clock hands */
}
.hand {
 width:50%;
 height:6px;
 background: white;
 position: absolute;
 top:50%;
 transform-origin: 100%;
 transform: rotate(90deg);
 transition: all 0.05s;
 transition-timing-function: cubic-bezier(0, 0.44, 0.3, 1.03);
}
.circle {
 z-index: 5;
 position: absolute;
 top: 48.5%;
 left: 48.3%;
 background: #5D4E4E;
 width: 3.5%;
 height: 3.5%;
 border-radius:50%;
}
.hour-hand {
 z-index: 2;
 width:35%;
 height:4px;
 left: 15%;
}
.second-hand {
 z-index: 4;
 top: 50%;
 left: -4%;
 transform-origin: 90%;
 width: 60%;
 height:2.5px;
 background: #5D4E4E;
}
.min-hand {
 z-index: 3;
 height:4px;
}
.dash {
 position: absolute;
 width: 1.5px;
 height: 5.7%;
 font-family: 'Raleway', sans-serif;
 font-size: 10px;
}
.twelve {
 left: 50%;
 top: -2%;
}
.six {
 left: 50%;
 bottom: -6%;
}
.three {
 top: 50%;
 left: -2%;
 transform: rotate(90deg);
}
.nine {
 top: 50%;
 right: -2%;
 transform: rotate(90deg);
}
.one {
 left: 75%;
 top: 5%;
 height: 5%;
 transform: rotate(25.5deg);
}
.eleven {
 right: 75%;
 top: 5%;
 height: 5%;
 transform: rotate(-25.5deg);
}
.eight {
 top: 75%;
 left: 5%;
 height: 5%;
 transform: rotate(55.5deg);
}
.four {
 top: 75%;
 right: 3%;
 height: 5%;
 transform: rotate(-55.5deg);
}
.two {
 left: 95%;
 top: 25%;
 height: 5%;
 transform: rotate(55.5deg);
}
.ten {
 right: 95%;
 top: 25%;
 height: 5%;
 transform: rotate(-55.5deg);
}
.seven {
 top: 95%;
 left: 25%;
 height: 5%;
 transform: rotate(25.5deg);
}
.five {
 top: 95%;
 right: 25%;
 height: 5%;
 transform: rotate(-25.5deg);
}
.date{
 position: absolute;
 top: 45.5%;
 left: 70%;
 width: 12%;
 height: 12%;
 background: #eaeaea;
 border-radius: 5%;
 text-align: center;
 vertical-align: middle;
 line-height: 35.75px;
 color: #D9D3D3;
}

@media only screen and (max-width: 1255px) and (min-width: 881px){

  #clock{
    margin-left: 27%;
  }

  #clock2{
    margin-left: 27%;
  }

  .up2{
    margin-bottom: 1000px;
  }
}

@media only screen and (max-width: 1255px) and (min-width: 1151px){

  #clock{
    margin-left: 10%;
  }

  #clock2{
    margin-left: 60%;
  }

  .up2{
    margin-bottom: 1000px;
  }

  #mo{
  	position: relative;
  	/*margin-top: 200px;*/
  }

  .month{
  	position: relative;
  }
}

@media only screen and (max-width: 1145px) and (min-width: 1110px){
	#mo{
		margin-top: 1400px;
	}
}


/*monthly css*/
* {box-sizing:border-box;}
.month ul {list-style-type: none;}
.weekdays ul {list-style-type: none;}
.days ul {list-style-type: none;}
.month {
    padding: 70px 25px;
    width: 100%;
    background: #D5D5D5;
    font-family: 'Raleway', sans-serif;
}

.month ul {
    margin: 0;
    padding: 0;
}

.month ul li {
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 3px;
}

.month .prev {
    float: left;
    padding-top: 10px;
}

.month .next {
    float: right;
    padding-top: 10px;
}

.weekdays {
    width: 73%;
    margin-left: 13%;
    margin-right: 13%;
    padding: 10px 0;
    background-color: #ddd;
    font-family: 'Raleway', sans-serif;
}

.weekdays li {
    display: inline-block;
    width: 13.6%;
    color: #666;
    text-align: center;
}

.days {
    padding: 10px 0;
    background: #eee;
    width:70%;
    margin-left: 13%;
    margin-right: 13%;
    width: 73%;
    margin-bottom: 0px;
    font-family: 'Raleway', sans-serif;
}

.days li {
    list-style-type: none;
    display: inline-block;
    width: 13.6%;
    text-align: center;
    margin-bottom: 5px;
    font-size:12px;
    color: #777;
}

.days li .active {
    padding: 10px;
    background: #D5D5D5;
}

/* Add media queries for smaller screens */
@media screen and (max-width:720px) {
    .weekdays li, .days li {width: 13.1%;}
}

@media screen and (max-width: 420px) {
    .weekdays li, .days li {width: 12.5%;}
    .days li .active {padding: 2px;}
}

@media screen and (max-width: 290px) {
    .weekdays li, .days li {width: 12.2%;}
}

@media only screen and (min-width: 1150px) and (max-width: 1255px){
	#clock2{
		float: none;
		clear: right;
	}
}

#mo{
  margin-top: 200px;
}

.mon{
  font-size: 18px;
  margin-top: 10px;
  margin-bottom: 5px;
  font-family: 'Raleway', sans-serif;
  text-align: center;
}

#mon{
  margin-top: 10px;
  margin-left: 40%;
  border: 1px solid #D5D5D5;
  border-radius: 3px;
  background: #d5d5d5;
  color: grey;
}

#mon select{
  padding: 5px 8px;
    border: none;
    box-shadow: none;
    background: #e5e3e3;
}

.activat{
  background: #D5D5D5;
  border: .5px solid #c1c1c1;
  font-family: 'Raleway', sans-serif;
}

.deactivat{
  background: #D5D5D5;
  border: .5px solid #c1c1c1;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 100px;
}

.up p a{
  text-decoration: none;
}

.up .downto{
  margin-left: 90%;
}

.up .upto{
  margin-left: 90%;
}

.up{
  width: 99%;
  margin-bottom: 20px;
}


.up2 p a{
  text-decoration: none;
}

.up2 .downto2{
  margin-left: 90%;
  float: left;
}

.up2 .upto2{
  margin-left: 90%;
  float: left;
}

.up2{
  width: 99%;
  margin-bottom: 10px;
}

.up3 p a{
  text-decoration: none;
}

.up3 img{
  margin-left: 95%;
}

.up3{
  width: 99%;
  margin-bottom: 20px;
}

.aboutus{
  margin-bottom: 40px;
}

#desc{
  font-size: 30px;
  text-align:center;
  margin-right: 5%;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 25px;
}

#d3{
 width: 70%;
 font-family: 'Raleway', sans-serif;
 font-size: 20px;
 text-align:center;
 margin-left: 15%;
 margin-bottom: 30px;
}

#desc1{
  font-size: 30px;
  text-align:center;
  margin-right: 5%;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 25px;
}

#d1{
  width: 70%;
 font-family: 'Raleway', sans-serif;
 font-size: 20px;
 text-align:center;
  margin-left: 15%;
  margin-bottom: 30px;
}

#desc2{
  font-size: 30px;
  text-align:center;
  font-family: 'Raleway', sans-serif;
  margin-bottom: 25px;
}

#d2{
  width: 70%;
 font-family: 'Raleway', sans-serif;
 font-size: 20px;
 text-align:center;
  margin-left: 15%;
  margin-bottom: 30px;
}

#aboutus img{
  display: block;
  margin: 0 auto;
}

